--- a/templates/form.html
+++ b/templates/form.html
@@ -17,7 +17,7 @@
       }
     </style>
     <!-- This site is optimized with the Yoast SEO plugin v24.7 - https://yoast.com/wordpress/plugins/seo/ -->
-    <title>Home - Oral Surgery and Wisdom Teeth of Lake Charles</title>
+    <title>Home - Oral Surgery and Wisdom Teeth of Elizabth Pruitt</title>
     <link
       rel="canonical"
       href="https://oralsurgeryandwisdomteethoflakecharles.com/"
@@ -30,7 +30,7 @@
     />
     <meta
       property="og:description"
-      content="Welcome to Oral Surgery + Lake Charles | Wisdom Teeth of Louisiana Book An Appointment Your Oral Health, Our Priority At Oral Surgery + we are dedicated to providing exceptional oral and maxillofacial surgical care with a personal touch. Our highly skilled team, led by experienced surgeons, is committed to ensuring your comfort and delivering […]"
+      content="Welcome to Oral Surgery + Elizabeth Pruitt | Wisdom Teeth of Louisiana Book An Appointment Your Oral Health, Our Priority At Oral Surgery + we are dedicated to providing exceptional oral and maxillofacial surgical care with a personal touch. Our highly skilled team, led by experienced surgeons, is committed to ensuring your comfort and delivering […]"
     />
     <meta
       property="og:url"
