--- a/templates/form.html
+++ b/templates/form.html
@@ -26,7 +26,7 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:title"
-      content="Home - Oral Surgery and Wisdom Teeth of Lake Charles"
+      content="Home - Oral Surgery and Wisdom Teeth of Elizabeth Pruitt"
     />
     <meta
       property="og:description"
@@ -38,7 +38,7 @@
     />
     <meta
       property="og:site_name"
-      content="Oral Surgery and Wisdom Teeth of Lake Charles"
+      content="Oral Surgery and Wisdom Teeth of Elizabeth Pruitt"
     />
     <meta
       property="article:modified_time"
